<resources>
    <string name="exit_toast">再按一次退出程序哦~</string>
    <string name="jump">跳过</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="confirm">确定</string>
    <string name="done">完成</string>
    <string name="check_update_text">版本更新</string>
    <string name="score_us_text">给软件评分</string>
    <string name="copyright_text">垃圾分类宝版权所有</string>
    <string name="code_author">作者：李红梅</string>
    <string name="app_name">政企通</string>
    <string name="result_network_error">网络不给力，请检查网络</string>
    <string name="result_server_error">服务器连接失败，请稍后再试</string>
    <string name="result_server_timeout">服务器连接超时，请稍后再试</string>
    <string name="result_empty_error">系统繁忙，请稍后再试</string>
    <string name="my">我的</string>
    <string name="hint_project_name">请填写申报项目名称</string>
    <string name="hint_project_type">请填写申报类别</string>
    <string name="hint_project_info">请填写项目描述</string>
    <string name="hint_project_money">请填写申报补贴金额</string>
    <string name="hint_address">请填写地址</string>
    <string name="hint_contract_person">请填写联系人</string>
    <string name="hint_phone">请填写联系电话</string>
    <string name="personal_center">个人中心</string>
    <string name="personal_data">个人资料</string>
    <string name="project_approval">项目审批</string>
    <string name="my_post">我的发文</string>
    <string name="my_collect">我的收藏</string>
    <string name="authentication_center">认证中心</string>
    <string name="promotion_download">推广下载</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="switch_account">切换账号</string>
    <string name="exit">退出</string>
    <string name="questionnaire">调查问卷</string>
    <string name="project_application">项目申报</string>
    <string name="system_announcement">系统公告</string>
    <string name="my_business">我的企业</string>
    <string name="message_alert">消息提醒</string>
    <string name="projects_to_be_approved">待审核</string>
    <string name="enprice_od">企业公告</string>
    <string name="my_enprice_od">我的企业公告</string>
    <string name="approved_projects">已审核</string>
    <string name="enterprise_project">企业项目</string>
    <string name="my_declaration">我的申报</string>
    <string name="my_receive_msg">我的收文</string>
    <string name="issued_documents">已发公文</string>
    <string name="completed">已填报</string>
    <string name="not_filled_in">未填报</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="declare_detail_title">申报详情</string>
    <string name="project_name">申报项目名称</string>
    <string name="project_type">申报类别</string>
    <string name="company_name">公司名称</string>
    <string name="project_detail">项目描述</string>
    <string name="project_money">申报补贴金额</string>
    <string name="address">地址</string>
    <string name="contract">联系人</string>
    <string name="phone">联系方式</string>
    <string name="attachment">附件</string>
    <string name="isDeclare">审批是否通过</string>
    <string name="declare_appointment">审批意见</string>
    <string name="adopt">通过</string>
    <string name="notadopt">不通过</string>
    <string name="submit_declare">提交审批</string>
    <string name="goverment_user">政府用户</string>
    <string name="company_user">企业用户</string>
    <string name="manage">管理</string>
    <string name="group_msg">分组消息</string>
    <string name="add_msg">新增消息</string>
    <string name="add_od">新增公告</string>
    <string name="edit_msg">编辑通知</string>
    <string name="title">标题</string>
    <string name="text">正文</string>
    <string name="hint_msg_title">请输入通知标题</string>
    <string name="hint_msg_text">请输入通知正文</string>
    <string name="add_attachment">添加附件</string>
    <string name="send">发送</string>
    <string name="send_msg">发送消息</string>
    <string name="select_file">请选择文件</string>
    <string name="msg">消息</string>
    <string name="login">登录</string>
    <string name="login_hint">还没有账号？立即</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="username_hint">请输入用户名或手机号</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="verifycode">验证码</string>
    <string name="verifycode_hint">请输入验证码</string>
    <string name="step1">（1/2）</string>
    <string name="step2">（2/2）</string>
    <string name="register_hint">已经有账号？立即</string>
    <string name="comany_name">企业名称*</string>
    <string name="company_code">统一社会信用代码*</string>
    <string name="businessType">类型*</string>
    <string name="businessScope">经营范围*</string>
    <string name="businessTerm">营业期限*</string>
    <string name="legalRepresentative">法定代表人*</string>
    <string name="registeredCapital">注册资本*</string>
    <string name="setUpDate">成立日期*</string>
    <string name="com_address">住所*</string>
    <string name="company_verify">营业执照上传*</string>
    <string name="complete">完成</string>
    <string name="preview_step">上一步</string>
    <string name="username_must">用户名*</string>
    <string name="phone_must">手机号码*</string>
    <string name="mail_must">邮箱*</string>
    <string name="id_must">身份证*</string>
    <string name="pwd_must">密码*</string>
    <string name="verify_pwd_must">确认密码*</string>
    <string name="message_must">请输入必填信息</string>
    <string name="cs_contract">客服联系方式</string>
    <string name="pwd_not_equal">两次输入的密码不一致</string>
    <string name="phoneNumber">电话</string>
    <string name="email">邮箱</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="select_user">请至少选择一个用户</string>
    <string name="hint_group_name">  *分组名</string>
    <string name="group_name_remark">  备注</string>
    <string name="have_selected">已选择 %1$s 人</string>
    <string name="have_selected_member">已选择 %1$s 人</string>
    <string name="have_selected_group">已选择 %1$s 组</string>
    <string name="ensure">确定</string>
    <string name="declare_name">申报项目名称</string>
    <string name="declare_type">申报类别</string>
    <string name="declare_info">项目描述</string>
    <string name="declare_money">申报补贴金额</string>
    <string name="add_attachment_all">点击添加附件(ppt.docx.xlsx.pdf.jpg.png)	</string>
    <string name="have_declare">已审核</string>
    <string name="wait_declare">待审核</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="tv_published">已发布</string>
    <string name="tv_to_be_reviewed">待审核</string>
    <string name="tv_reviewed">已审核</string>
    <string name="tv_reviewed_fail">审核失败</string>
    <string name="tv_offiline">已下线</string>
    <string name="trends_of_thousand_enterprises">千企动态</string>
    <string name="business_information">商业信息</string>
    <string name="send_dynamic">发布</string>
    <string name="senddynamic">发布动态</string>
    <string name="policy_document_library">政策文件库</string>
    <string name="policy_sender">发布者：%1$s</string>
    <string name="like_count">点赞%1$d次</string>
    <string name="feedback_title">政企会客间</string>
    <string name="feedback_history">反馈历史</string>
    <string name="dynamic_send_history">发布历史</string>
    <string name="add_feed_back">新增反馈</string>
    <string name="check_more">查看更多(%1$s)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_govass_main">MainActivity</string>
    <string name="title_activity_govass_navi">MainActivity</string>
</resources>