<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp350"
    android:background="@drawable/add_msg_pop_bg"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp350">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/edit_msg"
                    android:textColor="#ff303030"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/ic_esc" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                android:textColor="#ff303030"
                android:textSize="16sp" />

            <com.xuexiang.xui.widget.edittext.ClearEditText
                android:id="@+id/et_title"
                style="@style/EditText.Normal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="15dp"
                android:hint="@string/hint_msg_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_marginStart="15dp"
                android:textColor="#ff303030"
                android:textSize="16sp" />

            <com.xuexiang.xui.widget.edittext.ClearEditText
                android:id="@+id/et_text"
                style="@style/EditText.Normal"
                android:layout_width="match_parent"
                android:layout_height="161dp"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:gravity="left"
                android:hint="@string/hint_msg_text" />

            <TextView
                android:id="@+id/tv_attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/attachment"
                android:textColor="#ff303030"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:overScrollMode="never" />

            <LinearLayout
                android:id="@+id/rl_add_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_increase" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/add_attachment"
                    android:textColor="#ff999999"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/sendBtn"
                style="@style/ButtonView.Blue"
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:text="发送" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>